fix validation